@@ -124,7 +124,8 @@ public class JNAeratorCommandLineArgs {
 		Synchronized(	"-synchronized",			"Generate synchronized native methods"),
 		BeanStructs(		"-beanStructs",			"Generate getters and setters for struct fields"),
 		BeautifyNames(		"-beautifyNames",		"Transform C names to Java-looking names : some_func() => someFunc()"),
-		JarOut(				"-jar",					"Jar file where all generated sources and the compiled classes go", new ArgDef(Type.OutputFile, "outFile")),
+		NoBodies(           "-noBodies",            "Don't convert function bodies to equivalent Java code (BridJ only)."),
+        JarOut(				"-jar",					"Jar file where all generated sources and the compiled classes go", new ArgDef(Type.OutputFile, "outFile")),
 		ScalaStructSetters( "-scalaStructSetters",  "Generate Scala-style setters for BridJ structs (with a name like fieldName_$eq)"),
         WCharAsShort(		"-wcharAsShort",		"Force treatment of wchar_t as short (char by default)"),
         CallbackInvokeName( "-callbacksInvokeMethodName", "Name of the invocation method of callbacks ('apply' by default)", new ArgDef(Type.String, "methodName")),
